# job-market

./: .gitignore  CRUSH.md  README.md  cmp copy.ipynb  cmp.ipynb  config.py  main.py  pyproject.toml  readme.md  styles.tcss  test.ipynb  test.py  test2.py  view_data.ipynb
config/: config.py  scraper_rules.json  settings.py
js/: delucru_md.js  jobber_md.js  rabota_md.js
src/: base_menu.py  config_menu.py  database.py  db_operations.py  debug_menu.py  exhangerate.py  filter_menu.py  generate_html_page.py  menu.py  process_data.py  repository.py  results_menu.py  scrape_data.py  scrape_job_details.py  scrape_job_recheck.py  scrape_jobs_list.py  scrape_menu.py  scraper_menu.py  structure_data_with_llm.py
